# genealogic-tree-v2

./: CMakeLists.txt  ChildFam.h  GrandFam.h  Marriage.h  NoChildFam.h  Person.h  README.md  SibFam.h  UncleFam.h  zdolr2.cpp
